--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
+		<!--<dependency>-->
+			<!--<groupId>pl.sidor</groupId>-->
+			<!--<artifactId>CarFactoryAPI</artifactId>-->
+			<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
+
 	</dependencies>
 
 	<build>
