add user and role table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 
-#spring.datasource.data=classpath:engine.sql
+#spring.datasource.data=classpath:static/user.sql
